[tool.poetry]
authors = ["Konstantin-Dudersky <Konstantin.Dudersky@gmail.com>"]
description = ""
name = "fastapi_tutorial"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "0.75.0"
python = "3.10.*"
uvicorn = "0.17.6"

[tool.poetry.dev-dependencies]
black = "22.1.0"
flake8 = "4.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
